# ClotoCore

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.ps1  lefthook.yml  mcp.toml
crates/core/: Cargo.toml
crates/core/benches/: database_operations.rs  event_processing.rs  plugin_dispatch.rs  rate_limiting.rs  security_operations.rs
crates/core/migrations/: 20260302000000_cerebras_model_update.sql  20260302100000_add_agent_avatar.sql  20260303000000_sanitize_agent_ids.sql  20260303100000_update_default_agent_description.sql  20260304000000_add_trusted_commands.sql  20260304100000_add_claude_provider.sql  20260304200000_default_agent_mcp_grants.sql  20260304200001_grant_agent_utils.sql  20260304200002_fix_default_engine_cerebras.sql  20260305000000_add_chat_branching.sql  20260305100000_add_cron_hide_prompt.sql  20260305200000_add_cron_generation.sql  20260306000000_mcp_access_control_fk.sql  20260306100000_revoked_keys_ttl.sql  20260307000000_drop_orphaned_tables.sql  20260308000000_fix_mcp_server_prerequisites.sql  20260309000000_rename_ks22_to_cpersona.sql  20260309100000_heal_default_agent.sql  20260309200000_fix_agent_metadata_ks22.sql  20260309300000_add_vrm_path.sql  20260310000000_avatar_to_metadata.sql  20260310100000_llm_provider_auth_type.sql  20260310200000_add_agent_type.sql  20260312000000_add_cron_source_type.sql  20260315000000_add_marketplace_fields.sql  20260404000000_add_audit_chain_hash.sql  20260406000000_add_memory_locks.sql  20260410000000_unify_mcp_server_lifecycle.sql  20260412000000_add_groq_provider.sql  20260412100000_add_lmstudio_provider.sql  20260412200000_clear_ollama_default_model.sql  20260413100000_add_llm_provider_model_history.sql  20260413200000_rename_lmstudio_to_local.sql  20260413300000_update_ollama_display_name.sql  20260414000000_add_provider_context_length.sql  20260415000000_add_mcp_server_trust_level.sql  20260419000000_add_provider_reasoning_prefill.sql  20260421000000_rename_reasoning_prefill_to_thinking_mode.sql  20260421100000_add_llm_provider_quirks.sql  20260508000000_add_mcp_server_seal.sql
crates/core/src/: capabilities.rs  cli.rs  config.rs  consensus.rs  events.rs  handlers.rs  installer.rs  lib.rs  main.rs  middleware.rs  platform.rs  test_utils.rs  viseme.rs
crates/core/tests/: concurrent_events_test.rs  e2e_workflows_test.rs  event_cascading_test.rs  event_memory_management_test.rs  handlers_http_test.rs  kernel_integration_test.rs  migration_test.rs  permission_elevation_test.rs  permission_workflow_test.rs  plugin_lifecycle_test.rs  security_forging_test.rs  sse_streaming_test.rs  system_loop_test.rs  (+1 more)
crates/mgp-avatar/: Cargo.toml
mcp-servers/ks22/: pyproject.toml  server.py
(+324 files in other folders)
