[package]
name = "cloto_core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cloto_system"
path = "src/main.rs"

[[bin]]
name = "cloto"
path = "src/bin/cloto.rs"

[dependencies]
cloto_shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
tracing-appender.workspace = true
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros"] }
async-trait.workspace = true
axum.workspace = true
tower = { version = "0.5", features = ["util"] }
reqwest.workspace = true
tower-http.workspace = true
futures.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
rust-embed = "8.5"
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
governor = "0.6"
dashmap.workspace = true
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
argon2 = "0.5"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
subtle = "2"
toml = "1.0"
cron = "0.16"
uuid.workspace = true
base64 = "0.22"
flate2 = "1"
tar = "0.4"
zip = "4"
unicode-normalization = "0.1"
lindera = { version = "2.3", features = ["embed-ipadic"] }

[dev-dependencies]
http = "1.0"
criterion = { workspace = true }
tokio-test = "0.4"
tempfile = "3"

[[bench]]
name = "event_processing"
harness = false

[[bench]]
name = "database_operations"
harness = false

[[bench]]
name = "security_operations"
harness = false

[[bench]]
name = "plugin_dispatch"
harness = false

[[bench]]
name = "rate_limiting"
harness = false