[package]
name = "cloto-mgp-avatar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MGP avatar server for VRM expression and idle behavior control"

[[bin]]
name = "mgp-avatar"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
uuid = { workspace = true }
chrono = { workspace = true }
