[project]
name = "cloto-mcp-ks22"
version = "0.1.0"
description = "Cloto MCP Server: KS2.3 persistent memory with FTS5 search and anti-contamination"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
